# pclaude_code

./: .gitignore  Makefile  README.md  REVIEW_2026-07-02.md  pyproject.toml  pytest.ini
hare/: .pre-commit-config.yaml  Makefile  __main__.py  backend_stdio.py  cost_tracker.py  history.py  ink_facade.py  main.py  project_onboarding_state.py  pyproject.toml  query_engine.py  session_setup.py  sitecustomize.py  tool.py
hare/alignment/: README.md  golden_normalize.py
hare/app_types/: connector_text.py  hooks.py  ids.py  plugin.py  session.py
hare/audit/: import-failures-35.txt  mypy-errors-ci-321.txt
hare/bootstrap/: state.py
hare/bridge/: __init__.py  bridge_config.py  bridge_enabled.py  bridge_main.py  bridge_messaging.py  bridge_pointer.py  bridge_status_util.py  capacity_wake.py  create_session.py  debug_utils.py  env_less_bridge_config.py  inbound_attachments.py  inbound_messages.py  init_repl_bridge.py  jwt_utils.py  remote_bridge_core.py  repl_bridge.py  repl_bridge_handle.py  session_id_compat.py  session_runner.py  trusted_device.py  work_secret.py
hare/buddy/: __init__.py  companion.py  prompt.py
hare/cli/: __init__.py  auth_handler.py  ccr_client.py  mcp_handler.py  plugins_handler.py  print_handler.py  remote_io.py  serial_batch_uploader.py  structured_io.py  transport_utils.py  update_cli.py
hare/commands_impl/: __init__.py  add_dir.py  backfill_sessions.py  bridge_cmd.py  bridge_kick.py  brief.py  bughunter.py  chrome.py  clear_cmd.py  commit.py  config_cmd.py  context.py  context_noninteractive.py  cost.py  create_moved_to_plugin_command.py  diff.py  exit_cmd.py  export_cmd.py  extra_usage.py  feedback.py  files.py  good_claude.py  help_cmd.py  ide.py  init_cmd.py  init_verifiers.py  insights.py  install_cmd.py  install_github_app.py  keybindings.py  listen.py  login.py  logout.py  mcp.py  memory.py  mock_limits.py  model_cmd.py  oauth_refresh.py  onboarding.py  perf_issue.py  (+23 more)
(+2393 files in other folders)
